--- a/extension/index.html
+++ b/extension/index.html
@@ -10,7 +10,7 @@
     <script async src="js/theme.js"></script>
     <script async src="js/load.js"></script>
     <!-- <script async src="js/gaq.js"></script> -->
-    </head>
+</head>
 
 <body>
     <div class="notification">
@@ -50,11 +50,13 @@
                         <div class="setting-item">
                             <!-- <span class="setting-name">Notifications</span> -->
                             <div class="content-label">
-                                <label id="allNotifications" for="checkboxAllNotifications">Notification every time a track is switched.</label>
+                                <label id="allNotifications" for="checkboxAllNotifications">Notification every time a
+                                    track is switched.</label>
                                 <input class="switcher" type="checkbox" id="checkboxAllNotifications">
                             </div>
                             <div class="content-reassign">
-                                <span class="subtitle" id="showNotify">Show notifications when control from keyboard: </span>
+                                <span class="subtitle" id="showNotify">Show notifications when control from keyboard:
+                                </span>
                                 <div class="content-label">
                                     <label id="playPauseNotify" for="n1">Notification when play / pause.</label>
                                     <input class="switcher" type="checkbox" id="n1">
@@ -69,15 +71,17 @@
                             <div class="content-reassign">
                                 <span class="subtitle" id="SelectColorTheme">Select color theme:</span>
                                 <div>
-                                    <input class="switcher" type="radio" id="DefaultTheme" name="drone" value="DefaultTheme" checked>
+                                    <input class="switcher" type="radio" id="DefaultTheme" name="drone"
+                                        value="DefaultTheme" checked>
                                     <label for="DefaultTheme">Default</label>
                                 </div>
-                        
+
                                 <div>
-                                    <input class="switcher" type="radio" id="LightTheme" name="drone" value="LightTheme">
+                                    <input class="switcher" type="radio" id="LightTheme" name="drone"
+                                        value="LightTheme">
                                     <label for="LightTheme">Light</label>
                                 </div>
-                        
+
                                 <div>
                                     <input class="switcher" type="radio" id="DarkTheme" name="drone" value="DarkTheme">
                                     <label for="DarkTheme">Dark</label>
@@ -85,7 +89,8 @@
                             </div>
 
                             <div class="content-label">
-                                <label id="checkBoxIncreaseCover" for="n4">Reduce the control buttons and increase the cover.</label>
+                                <label id="checkBoxIncreaseCover" for="n4">Reduce the control buttons and increase the
+                                    cover.</label>
                                 <input class="switcher" type="checkbox" id="n4">
                             </div>
                             <div class="content-label">
@@ -99,10 +104,12 @@
                                 <input class="switcher" type="checkbox" id="n6">
                             </div>
                             <div class="content-reassign">
-                                <span class="subtitle" id="shortcutKeyOpenPopup">Select a shortcut key to open and activate the popup. (shortcut key will be reassigned)</span>
+                                <span class="subtitle" id="shortcutKeyOpenPopup">Select a shortcut key to open and
+                                    activate the popup. (shortcut key will be reassigned)</span>
                                 <div class="container-reassign">
                                     <div class="content-label">
-                                        <label id="checkBoxReassign" for="n7">The next shortcut key will be reassign -</label>
+                                        <label id="checkBoxReassign" for="n7">The next shortcut key will be reassign
+                                            -</label>
                                         <input class="switcher" type="checkbox" id="n7">
                                     </div>
                                     <div class="select-shortcut-key">Choose from the list below.</div>
@@ -163,12 +170,12 @@
                         <div class="toggle-volume control-toggle"> </div>
                         <div class="slider-content">
                             <div class="slider">
-                                <div class="handle-helper">
-                                    <div class="slider-helper"></div>
-                                    <div class="slider-handle"></div>    
-                                </div>
                                 <div class="slider-groove slider-groove-volume">
                                     <div class="slider-groove-current slider-groove-current-volume"></div>
+                                </div>
+                                <div class="handle-helper">
+                                    <div class="slider-helper"></div>
+                                    <div class="slider-handle"></div>
                                 </div>
                             </div>
                         </div>
@@ -178,12 +185,14 @@
             </div>
             <div class="slider-content">
                 <div class="slider  slider-progress">
+                    <div class="slider-groove slider-groove-progress">
+                        <div class="loaded"> </div>
+                        <div class="loader-await-loading"></div>
+                        <div class="slider-groove-current slider-groove-current-progress"></div>
+                    </div>
                     <div class="handle-helper">
                         <div class="slider-helper"></div>
-                        <div class="slider-handle progress-handle"></div>
-                    </div>
-                    <div class="slider-groove slider-groove-progress">
-                        <div class="slider-groove-current slider-groove-current-progress"></div>
+                        <div class="slider-handle progress-handle"> </div>
                     </div>
                 </div>
             </div>
