--- a/extension/popup.html
+++ b/extension/popup.html
@@ -37,12 +37,12 @@
             <div class="toggle-volume control-toggle"> </div>
             <div class="slider-content">
                 <div class="slider">
-                    <div class="handle-helper">
-                        <div class="slider-helper"></div>
-                        <div class="slider-handle"></div>    
-                    </div>
                     <div class="slider-groove slider-groove-volume">
                         <div class="slider-groove-current slider-groove-current-volume"></div>
+                    </div>
+                    <div class="handle-helper">
+                        <div class="slider-helper"></div>
+                        <div class="slider-handle"></div>
                     </div>
                 </div>
             </div>
@@ -53,12 +53,14 @@
             <div class="slider-content slider-content-popup">
                 <span class="current-time">00:00</span>
                 <div class="slider  slider-progress slider-progress-popup">
+                    <div class="slider-groove slider-groove-progress">
+                        <div class="loaded"></div>
+                        <div class="loader-await-loading"></div>
+                        <div class="slider-groove-current slider-groove-current-progress"></div>
+                    </div>
                     <div class="handle-helper">
                         <div class="slider-helper"></div>
                         <div class="slider-handle progress-handle"></div>
-                    </div>
-                    <div class="slider-groove slider-groove-progress">
-                        <div class="slider-groove-current slider-groove-current-progress"></div>
                     </div>
                 </div>
                 <span class="duration">00:00</span>
