--- a/extension/side-panel.html
+++ b/extension/side-panel.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/popup.css">
     <link rel="stylesheet" href="css/side-panel.css">
-    <script src="js/js-onload.js"></script>
+    <script src="js/FileReady.js"></script>
     <script async src="js/theme.js"></script>
 </head>
 
