--- a/extension/popup.html
+++ b/extension/popup.html
@@ -48,8 +48,8 @@
                     <div class="slider-groove slider-groove-volume">
                         <div class="slider-groove-current slider-groove-current-volume"></div>
                     </div>
-                    <div class="handle-helper">
-                        <div class="slider-helper"></div>
+                    <div class="handle-toltip">
+                        <div class="slider-toltip"></div>
                         <div class="slider-handle"></div>
                     </div>
                 </div>
@@ -66,8 +66,8 @@
                         <div class="loading-waiting-bar"></div>
                         <div class="slider-groove-current slider-groove-current-progress"></div>
                     </div>
-                    <div class="handle-helper">
-                        <div class="slider-helper"></div>
+                    <div class="handle-toltip">
+                        <div class="slider-toltip"></div>
                         <div class="slider-handle progress-handle"></div>
                     </div>
                 </div>
