--- a/extension/popup.html
+++ b/extension/popup.html
@@ -14,6 +14,8 @@
 <body>
     <div class="notification">
         <h2 class="h2-notification">Track added to black list!</h2>
+        <div class="notification-time-left"></div>
+        <div class="close-notification"></div>
     </div>
     <div class="modal ">
         <div class="image-container">
