--- a/extension/side-panel.html
+++ b/extension/side-panel.html
@@ -15,6 +15,8 @@
 <body>
     <div class="notification">
         <h2 class="h2-notification">Track added to black list!</h2>
+        <div class="notification-time-left"></div>
+        <div class="close-notification"></div>
     </div>
     <div class="popup-btn-container">
         <div class="popup-btn"></div>
