--- a/extension/index.html
+++ b/extension/index.html
@@ -246,12 +246,13 @@
         </div>
 
     </div>
-    <script defer src="js/general.js"></script>
+    <script defer src="js/general-utils.js"></script>
     <script defer src="js/ExecutionDelay.js"></script>
     <script defer src="js/options.js "></script>
     <script defer src="js/slider.js"></script>
     <script defer src="js/player.js"></script>
     <script defer src="js/what-new.js"></script>
+    <script defer src="js/general-elements.js"></script>
     <script defer src="js/extension.js "></script>
     <script defer src="js/translate.js"></script>
 
