--- a/extension/side-panel.html
+++ b/extension/side-panel.html
@@ -112,10 +112,10 @@
             </div>
         </div>
     </div>
-    <script defer src="js/general.js"></script>
+    <script defer src="js/general-utils.js"></script>
     <script defer src="js/ExecutionDelay.js"></script>
+    <script defer src="js/general-elements.js"></script>
     <script defer src="js/popup.js "></script>
-    <script defer src="js/side-panel.js"></script>
     <script defer src="js/player.js"></script>
     <script defer src="js/slider.js"></script>
 </body>
