--- a/extension/popup.html
+++ b/extension/popup.html
@@ -108,8 +108,9 @@
             </div>
         </div>
     </div>
-    <script defer src="js/general.js "></script>
+    <script defer src="js/general-utils.js "></script>
     <script defer src="js/ExecutionDelay.js"></script>
+    <script defer src="js/general-elements.js"></script>
     <script defer src="js/popup.js "></script>
     <script defer src="js/player.js"></script>
     <script defer src="js/slider.js"></script>
