--- a/extension/index.html
+++ b/extension/index.html
@@ -138,9 +138,9 @@
                 </div>
             </div>
             <div class="support-menu">
-                <h4>Any questions write to
+                <h3 class="write-to">Any questions write to
                     <a href="mailto:nightsoftware@outlook.com">nightsoftware@outlook.com</a>
-                </h4>
+                </h3>
             </div>
         </div>
         <div class="close-side"></div>
