--- a/extension/index.html
+++ b/extension/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="notification">
-        <h2 class="h2-notification">Track added to black list!</h2>
+        <h2 class="h2-notification">Notification</h2>
         <div class="notification-time-left"></div>
         <div class="close-notification"></div>
         <button class="notification-action"></button>
@@ -65,12 +65,11 @@
                         </div>
                         <div class="setting-item">
                             <div class="content-label setting-item-hover">
-                                <label id="PinTab" for="checkboxPinTab">Auto-pin Yandex.Music</label>
+                                <label id="PinTab" for="checkboxPinTab">Auto-pin</label>
                                 <input class="switcher" type="checkbox" id="checkboxPinTab">
                             </div>
                         </div>
                         <div class="setting-item">
-                            <!-- <span class="setting-name">Notifications</span> -->
                             <div class="content-label setting-item-hover">
                                 <label id="allNotifications" for="checkboxAllNotifications">Notification every time a
                                     track is switched.</label>
@@ -106,12 +105,6 @@
                                 <div class="gradients"> </div>
 
                             </div>
-
-                            <div class="content-label setting-item-hover">
-                                <label id="checkBoxIncreaseCover" for="n4">Reduce the control buttons and increase the
-                                    cover.</label>
-                                <input class="switcher" type="checkbox" id="n4" checked>
-                            </div>
                             <div class="content-label setting-item-hover">
                                 <label id="checkBoxDislikeButton" for="n5">Add a dislike button?</label>
                                 <input class="switcher" type="checkbox" id="n5">
@@ -133,14 +126,14 @@
                                     <div class="input-step-content setting-item-hover">
                                         <span id="SecondsPosition">width:</span>
                                         <div class="input-step-container">
-                                            <input class="input-step" type="number" id="PopupWidth" value="250" min="250" max="800" />
+                                            <input class="input-step" type="number" id="PopupWidth" value="380" min="250" max="800" />
                                             <span class="span-px">px</span>
                                         </div>
                                     </div>
                                     <div class="input-step-content setting-item-hover">
                                         <span id="SecondsPosition">height:</span>
                                         <div class="input-step-container">
-                                            <input class="input-step" type="number" id="PopupHeight" value="110" min="110" max="800" />
+                                            <input class="input-step" type="number" id="PopupHeight" value="580" min="110" max="800" />
                                             <span class="span-px">px</span>
                                         </div>
                                     </div>
@@ -190,12 +183,6 @@
     <div class="title ">Yandex Music</div>
     <div class="content-track ">
         <div class="cover"></div>
-
-        <!-- <div class="content-cover">
-            <div class="prev-cover cover"></div>
-            <div class="cover"></div>
-            <div class="next-cover cover"></div>
-        </div> -->
         <div class="content-track-artist ">
             <div class="title name-track ">Track</div>
             <div class="title name-artists ">Artists</div>
@@ -317,7 +304,6 @@
             <h2 id="AppQuestion">Reload the tab or open new?</h2>
             <div class="yes-no-new">
                 <button id="Yes" class="no-conect-btn">Yes</button>
-                <button id="No" class="no-conect-btn">No</button>
                 <button id="New" class="no-conect-btn">New Yandex Music Tab</button>
             </div>
         </div>
@@ -330,7 +316,7 @@
             </div>
             <div class="list-changes-coontent"></div>
             <div class="filter"></div>
-            <button id="YesNews" class="yesNews yesNews-disable no-conect-btn">Yes</button>
+            <button id="YesNews" class="yesNews no-conect-btn">Yes</button>
         </div>
 
     </div>
