--- a/extension/popup.html
+++ b/extension/popup.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="notification">
-        <h2 class="h2-notification">Track added to black list!</h2>
+        <h2 class="h2-notification">Notification</h2>
         <div class="notification-time-left"></div>
         <div class="close-notification"></div>
     </div>
@@ -150,7 +150,6 @@
             <h2 id="AppQuestion">Reload the tab or open new?</h2>
             <div class="yes-no-new">
                 <button id="Yes" class="no-conect-btn">Yes</button>
-                <button id="No" class="no-conect-btn">No</button>
                 <button id="New" class="no-conect-btn">New Yandex Music Tab</button>
             </div>
         </div>
