--- a/extension/side-panel.html
+++ b/extension/side-panel.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="notification">
-        <h2 class="h2-notification">Track added to black list!</h2>
+        <h2 class="h2-notification">Notification</h2>
         <div class="notification-time-left"></div>
         <div class="close-notification"></div>
     </div>
@@ -32,11 +32,6 @@
             <img class="modal-cover"></img>
         </div>
     </div>
-    <!-- <div class="hamburger-menu-list">
-        <div class="bar-list1 transition"></div>
-        <div class="bar-list2 transition"></div>
-        <div class="bar-list3 transition"></div>
-    </div> -->
     <div class="content-track ">
         <div class="cover"></div>
         <div class="content-track-artist ">
@@ -160,7 +155,6 @@
             <h2 id="AppQuestion">Reload the tab or open new?</h2>
             <div class="yes-no-new">
                 <button id="Yes" class="no-conect-btn">Yes</button>
-                <button id="No" class="no-conect-btn">No</button>
                 <button id="New" class="no-conect-btn">New Yandex Music Tab</button>
             </div>
         </div>
